--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -136,8 +136,8 @@
           </pomIncludes>
           <localRepositoryPath>${project.build.directory}/it-repo</localRepositoryPath>
           <filterProperties>
-            <dagger.version>${project.version}</dagger.version>
-            <dagger.groupId>${project.groupId}</dagger.groupId>
+            <bsoneer.version>${project.version}</bsoneer.version>
+            <bsoneer.groupId>${project.groupId}</bsoneer.groupId>
           </filterProperties>
           <streamLogs>true</streamLogs>
         </configuration>
