--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@ language: java
 
 jdk:
   - oraclejdk7
+  - openjdk7
+  - oraclejdk8
 
-install: mvn install clean -DskipTests=true -Dinvoker.skip=true -Dgpg.skip=true
+install: mvn install clean -DskipTests=true -Dinvoker.skip=true
 
-script: mvn verify -Dgpg.skip=true
+script: mvn verify
 
 after_success:
   - chmod +x .buildscript/deploy_snapshot.sh
