--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 jdk:
   - oraclejdk7
   - openjdk7
-  - oraclejdk8
+#  - oraclejdk8 not right now
 
 install: mvn install clean -DskipTests=true -Dinvoker.skip=true
 
