--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,19 @@
 		<!-- examples are handled in a default profile (see below) -->
 	</modules>
 
+    <developers>
+      <developer>
+        <id>guicamest</id>
+        <name>guicamest</name>
+        <organization>Sleepcamel</organization>
+        <organizationUrl>http://guicamest.github.io/bsoneer/</organizationUrl>
+        <roles>
+          <role>developer</role>
+        </roles>
+        <timezone>0</timezone>
+      </developer>
+    </developers>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -152,16 +165,19 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.4.2</version>
+				<version>2.5</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.scm</groupId>
 						<artifactId>maven-scm-provider-gitexe</artifactId>
-						<version>1.9</version>
+						<version>1.9.4</version>
 					</dependency>
 				</dependencies>
 				<configuration>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
+                    <useReleaseProfile>false</useReleaseProfile>
+                    <releaseProfiles>release</releaseProfiles>
+                    <goals>deploy</goals>
 				</configuration>
 			</plugin>
 
@@ -213,7 +229,7 @@
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.3</version>
+				<version>1.6.5</version>
 				<extensions>true</extensions>
 				<configuration>
 					<serverId>ossrh</serverId>
@@ -239,6 +255,31 @@
 		the profile is on and invokes examples. However, when processing javadocs, 
 		it is switched off omitting the example code from the javadoc. -->
 	<profiles>
+		<profile>
+			<id>release</id>
+			<modules>
+				<module>core</module>
+				<module>compiler</module>
+			</modules>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<profile>
 			<id>examples</id>
 			<activation>
