--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>com.sleepcamel.bsoneer</groupId>
     <artifactId>bsonner-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
 
   <artifactId>bsoneer-compiler</artifactId>
