--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 	<packaging>pom</packaging>
 	<version>0.0.2-SNAPSHOT</version>
 	<name>Bsoneer (Parent)</name>
-	<description>Mongo 3.0 library to generate codecs for existing beans</description>
+	<description>Bsoneer Parent</description>
 	<url>https://github.com/guicamest/bsoneer</url>
 
 	<modules>
@@ -49,15 +49,11 @@
 
 		<!-- Compilation -->
 		<java.version>1.6</java.version>
-		<javapoet.version>1.0.0</javapoet.version>
-		<guava.version>18.0</guava.version>
 		<mongo.version>3.0.2</mongo.version>
 
 		<!-- Test Dependencies -->
 		<junit.version>4.10</junit.version>
 		<fest.version>1.4</fest.version>
-		<truth.version>0.13</truth.version>
-		<compile-testing.version>0.4</compile-testing.version>
 		<mockito.version>1.10.19</mockito.version>
 	</properties>
 
@@ -87,16 +83,6 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>com.squareup</groupId>
-				<artifactId>javapoet</artifactId>
-				<version>${javapoet.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.google.guava</groupId>
-				<artifactId>guava</artifactId>
-				<version>${guava.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
@@ -105,16 +91,6 @@
 				<groupId>org.easytesting</groupId>
 				<artifactId>fest-assert</artifactId>
 				<version>${fest.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.google.testing.compile</groupId>
-				<artifactId>compile-testing</artifactId>
-				<version>${compile-testing.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.truth0</groupId>
-				<artifactId>truth</artifactId>
-				<version>${truth.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
@@ -175,7 +151,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-					<version>2.2.1</version>
+				<version>2.2.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -218,8 +194,6 @@
 				</configuration>
 			</plugin>
 
-
-
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
@@ -254,7 +228,6 @@
 			<modules>
 				<module>core</module>
 				<module>compiler</module>
-				<module>examples</module>
 			</modules>
 			<build>
 				<plugins>
