--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>com.sleepcamel.bsoneer</groupId>
 		<artifactId>bsonner-parent</artifactId>
-		<version>0.0.2</version>
+		<version>0.0.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>bsoneer</artifactId>
