--- a/compiler/resolver/pom.xml
+++ b/compiler/resolver/pom.xml
@@ -14,35 +14,24 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.sleepcamel.bsoneer.example</groupId>
-		<artifactId>bsoneer-example-parent</artifactId>
+		<groupId>com.sleepcamel.bsoneer.compiler</groupId>
+		<artifactId>bsoneer-compiler-parent</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>complex</artifactId>
-	<name>Examples: complex</name>
+	<artifactId>bsoneer-compiler-resolver</artifactId>
+	<name>Bsoneer Compiler Resolvers</name>
 
 	<dependencies>
 		<dependency>
-			<groupId>com.sleepcamel.bsoneer</groupId>
-			<artifactId>bsoneer</artifactId>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>bsoneer-compiler-domain</artifactId>
 			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sleepcamel.bsoneer.compiler</groupId>
-			<artifactId>bsoneer-compiler</artifactId>
-			<version>${project.version}</version>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>3.0.3</version>
 		</dependency>
 	</dependencies>
+
 </project>
