--- a/compiler/pom.xml
+++ b/compiler/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>com.sleepcamel.bsoneer</groupId>
 		<artifactId>bsonner-parent</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.1.0</version>
 	</parent>
 
 	<groupId>com.sleepcamel.bsoneer.compiler</groupId>
