--- a/compiler/resolver/pom.xml
+++ b/compiler/resolver/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>com.sleepcamel.bsoneer.compiler</groupId>
 		<artifactId>bsoneer-compiler-parent</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.1.0</version>
 	</parent>
 
 	<artifactId>bsoneer-compiler-resolver</artifactId>
