--- a/examples/complex/pom.xml
+++ b/examples/complex/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>com.sleepcamel.bsoneer.example</groupId>
 		<artifactId>bsoneer-example-parent</artifactId>
-		<version>0.1.0</version>
+		<version>0.1.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>complex</artifactId>
